--- a/Neo4j_Workshop_KG_Game.ipynb
+++ b/Neo4j_Workshop_KG_Game.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOESQC6WBnJucLMhM1YvAHQ",
+      "authorship_tag": "ABX9TyOLJJWL6tYeFN6XUjIgbtjB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Neo4j Workshop - Knowledge Graph Game"
+        "# Neo4j Workshop - Knowledge Graph Game\n",
+        "\n",
+        "We will use a Neo4j graph database created on the [Neo4j sandbox](https://neo4j.com/sandbox/).\n",
+        "\n",
+        "After creating a Neo4j sandbox instance, you can access the connection details by clicking on the top right down arrow and picking the *Connection details* tab.  \n",
+        "\n",
+        "You will need 2 things:\n",
+        "* Password  \n",
+        "* Bolt URL   \n",
+        "\n",
+        "<img src=\"sandbox_details.png\" alt=\"Sandbox Details\" width=\"100%\" title=\"Sandbox Details\">  "
       ],
       "metadata": {
         "id": "9AjFt714iwko"
@@ -119,9 +129,7 @@
       "cell_type": "code",
       "source": [
         "# >> Update the password and the URL here <<\n",
-        "# gds = GraphDataScience(\"bolt://<your-ip-here>:7687\", auth=(\"neo4j\", \"<password>\"))\n",
-        "\n",
-        "gds = GraphDataScience(\"bolt://52.91.223.232:7687\", auth=(\"neo4j\", \"dishes-mule-routines\"))\n"
+        "gds = GraphDataScience(\"bolt://<your-ip-here>:7687\", auth=(\"neo4j\", \"<password>\"))"
       ],
       "metadata": {
         "id": "odtRg4i8j6jy"
